--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
     emailjs.init("-jhOg9hzuV2D3QwSY");
   })();
 </script>
+<link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
+<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
 
 </head>
 
